# LinuxApplicationDevelopment2023

./: Makefile
01_TerminalProject/: Show.c
02_Multifile/: Makefile  fun.c  prog.c
03_Text/: README.md  randomize.sh
04_Debugging/: Makefile  gdb-scenario-1  gdb-scenario-2  range.c  reference-1  reference-2
06_TracingFencing/: Makefile  lib_remove.c  move.c  test.sh
07_Environmental/: AUTHORS  COPYING  INSTALL  Makefile.am  README  configure.ac  rhasher.c  test.sh
08_I18n/: Makefile.am  README  configure.ac
08_I18n/po/: ru.po
08_I18n/src/: num_guesser.c
09_PatchDiff/: Makefile  maze-1.c
09_PatchDiff/patches/: 0001-Implement-PatchDiff-patch1-handle-maze-size.patch  0002-Implement-PatchDiff-patch2-handle-maze-symbols-and-m.patch  0003-Implement-PatchDiff-patch3-handle-seed-and-maze-symb.patch
11_Documenting/: Doxyfile.in  Makefile.am  README  configure.ac
11_Documenting/po/: POTFILES.in  ru.po
11_Documenting/src/: Makefile.am  num_guesser.c
