COMMON_GENERATES = src/*.o src/num_guesser
AUTOTOOLS_GENERATES = configure configure~ Makefile autom4te.cache Makefile.in aclocal.m4 config.h* config.log config.status install-sh missing stamp-h1 .deps depcomp compile autoscan.log test config.guess config.rpath config.sub m4 po/en@* po/ru@* po/insert-header.sin po/Make* po/POTFILES po/quot.sed po/stamp-it po/ru.gmo po/Rules-quot src/Makefile src/Makefile.in po/remove-potcdate.sin po/boldquot.sed ABOUT-NLS src/.deps

SUBDIRS = src po

clean:
	rm -rf $(AUTOTOOLS_GENERATES) $(COMMON_GENERATES)
